@@ -489,6 +489,9 @@ RawTile TileManager::getRegion( unsigned int res, int seq, int ang, int layers, 
 
   }
 
+  // Set total length of data
+  region.dataLength = (uint32_t) region.width * region.height * region.channels * (region.bpc/8);
+
   return region;
 
 }
